se trabaja con condicionales y ciclos

--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <!-- Este es mi navbar -->
     <button id="boton-saludar">saludar</button>
 
-    <script src="./main.js"></script>
+    <script src="./clase2.js"></script>
   </body>
 </html>
