se implementa fetching

--- a/index.html
+++ b/index.html
@@ -8,30 +8,11 @@
   </head>
   <body>
     <h1 id="title">Mi primera app</h1>
-    <div class="container-h2">
-      <h2>este es un h2</h2>
-    </div>
-    <h4>este no tiene clase ni id</h4>
-    <button class="btn-sumar">sumar</button>
-    <button id="btn-saludar">Saludar</button>
-    <button id="nombrar">decir nombre</button>
-    <form>
-      <input id="input-nombre" type="text" placeholder="ingresa tu nombre" />
-    </form>
 
-    <input
-      type="text"
-      id="primer-numero"
-      placeholder="ingresa el primer numero"
-    />
-    <input
-      type="text"
-      id="segundo-numero"
-      placeholder="ingresa el primer numero"
-    />
-    <button id="sumar-numeros">Sumar numeros</button>
-    <h3 class="h3-resultado">Resultado: ----</h3>
-    <section id="container-products"></section>
-    <script src="./clase7.js"></script>
+    <div id="container-products"></div>
+
+    <h3 id="bloque-final"></h3>
+
+    <script src="./clase8.js"></script>
   </body>
 </html>
