se trabaja con promesas y ejercicios

--- a/index.html
+++ b/index.html
@@ -8,11 +8,8 @@
   </head>
   <body>
     <h1 id="title">Mi primera app</h1>
+    <section id="container-posts"></section>
 
-    <div id="container-products"></div>
-
-    <h3 id="bloque-final"></h3>
-
-    <script src="./clase8.js"></script>
+    <script src="./clase9.js"></script>
   </body>
 </html>
