--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
   </head>
   <body>
     <h1 id="title">Mi primera app</h1>
+    <img
+      src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ84dVuZL-Hqy1doWaSRmJ9ar-jS-FePjl4Qw&s"
+      alt=""
+    />
+    <img src="./images/zapa.jfif" alt="" />
+    <img
+      src="https://res.cloudinary.com/dnqfh2chg/image/upload/v1747780355/javascript-clases/images_sre71e.png"
+      alt=""
+    />
+    <img
+      src="https://res.cloudinary.com/dnqfh2chg/image/upload/v1747780453/javascript-clases/images_q2mbzj.jpg"
+      alt=""
+    />
+    <input type="file" />
     <section id="container-posts"></section>
 
     <script src="./clase9.js"></script>
