se agrega imagen

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
   </head>
   <body>
     <h1 id="title">Mi primera app</h1>
+
+    <h2>este es un cambio</h2>
+    <img
+      src="https://res.cloudinary.com/dnqfh2chg/image/upload/v1747780355/javascript-clases/images_sre71e.png"
+      alt=""
+    />
     <section id="container-posts"></section>
 
     <script src="./clase9.js"></script>
